Implement uniq (#114)
* Add exceptions tests

* Add edge cases

* Add PasteArgsParser tests

* Fix pmd warnings

* Fix failing tests

* Add std input to test

* Implement uniq

* Add uniq tests

* Include provided uniq tests