@@ -17,7 +17,6 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -35,7 +34,7 @@ import sg.edu.nus.comp.cs4218.impl.util.CollectionUtils;
 import sg.edu.nus.comp.cs4218.impl.util.IOUtils;
 
 public class LsApplication implements LsInterface {
-    private final static String PATH_CURR_DIR = STRING_CURR_DIR + STRING_FILE_SEP;
+    private static final String PATH_CURR_DIR = STRING_CURR_DIR + STRING_FILE_SEP;
 
     /**
      * Runs the ls application with the specified arguments.
@@ -79,10 +78,6 @@ public class LsApplication implements LsInterface {
     }
 
     private LsResult listFolder(boolean isFoldersOnly, String folderName) throws LsException {
-        if (folderName == null) {
-            throw new LsException(ERR_INVALID_FILES);
-        }
-
         try {
             Path filePath = IOUtils.resolveAbsoluteFilePath(folderName);
 
@@ -118,10 +113,6 @@ public class LsApplication implements LsInterface {
             boolean isRecursive,
             String... folderNames
     ) throws LsException {
-        if (folderNames == null || CollectionUtils.isAnyNull((Object[]) folderNames)) {
-            throw new LsException(ERR_INVALID_FILES);
-        }
-
         List<LsResult> result = new ArrayList<>();
 
         for (String folderName : folderNames) {
@@ -135,7 +126,7 @@ public class LsApplication implements LsInterface {
                         continue;
                     }
 
-                    String newFolderName = Paths.get(
+                    String newFolderName = Path.of(
                             folderName.isEmpty() ? PATH_CURR_DIR : folderName,
                             file.getName()
                     ).toString();
