@@ -11,7 +11,6 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 import org.junit.jupiter.api.AfterAll;
@@ -33,8 +32,8 @@ class PipeCommandIT {
     private static final String FILE_1 = "file1.txt";
     private static final String FILE_2 = "file2.txt";
 
-    private final Path file1 = Paths.get(TEST_DIR, FILE_1);
-    private final Path file2 = Paths.get(TEST_DIR, FILE_2);
+    private final Path file1 = Path.of(TEST_DIR, FILE_1);
+    private final Path file2 = Path.of(TEST_DIR, FILE_2);
 
     private final InputStream stdin = System.in;
     private final OutputStream stdout = System.out;
