@@ -1,32 +1,32 @@
 package tdd.ef2;
 
-import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.Disabled;
-import org.junit.jupiter.api.Test;
-import sg.edu.nus.comp.cs4218.EnvironmentUtil;
-import sg.edu.nus.comp.cs4218.exception.AbstractApplicationException;
-import sg.edu.nus.comp.cs4218.exception.RmException;
-import sg.edu.nus.comp.cs4218.impl.app.RmApplication;
-
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.ArrayDeque;
-import java.util.ArrayList;
-import java.util.Deque;
-import java.util.List;
-
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static sg.edu.nus.comp.cs4218.impl.util.StringUtils.STRING_EMPTY;
 import static sg.edu.nus.comp.cs4218.impl.util.StringUtils.STRING_STDIN_FLAG;
 
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.ArrayDeque;
+import java.util.ArrayList;
+import java.util.Deque;
+import java.util.List;
+
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
+
+import sg.edu.nus.comp.cs4218.EnvironmentUtil;
+import sg.edu.nus.comp.cs4218.exception.AbstractApplicationException;
+import sg.edu.nus.comp.cs4218.exception.RmException;
+import sg.edu.nus.comp.cs4218.impl.app.RmApplication;
+
 @Disabled
 public class RmApplicationTest {
     public static final String TEMP = "temp";
-    public static final Path TEMP_PATH = Paths.get(EnvironmentUtil.currentDirectory, TEMP);
+    public static final Path TEMP_PATH = Path.of(EnvironmentUtil.currentDirectory, TEMP);
     public static Deque<Path> files = new ArrayDeque<>();
 
     @BeforeAll
@@ -70,7 +70,7 @@ public class RmApplicationTest {
             args.add(STRING_STDIN_FLAG + flag);
         }
         for (String file : files) {
-            args.add(Paths.get(TEMP, file).toString());
+            args.add(Path.of(TEMP, file).toString());
         }
         return args.toArray(new String[0]);
     }
@@ -87,7 +87,7 @@ public class RmApplicationTest {
     @Test
     void run_SpaceInName_DeletesFile() throws IOException, AbstractApplicationException {
         Path fileC = createFile("c   c");
-        new RmApplication().run(toArgs(STRING_EMPTY,"c   c"), System.in, System.out);
+        new RmApplication().run(toArgs(STRING_EMPTY, "c   c"), System.in, System.out);
         assertTrue(Files.notExists(fileC));
     }
 
@@ -95,7 +95,7 @@ public class RmApplicationTest {
     void run_MultipleFiles_DeletesFiles() throws IOException, AbstractApplicationException {
         Path fileD = createFile("d.txt");
         Path fileE = createFile("eerie");
-        new RmApplication().run(toArgs(STRING_EMPTY,"d.txt", "eerie"), System.in, System.out);
+        new RmApplication().run(toArgs(STRING_EMPTY, "d.txt", "eerie"), System.in, System.out);
         assertTrue(Files.notExists(fileD));
         assertTrue(Files.notExists(fileE));
     }
@@ -163,7 +163,8 @@ public class RmApplicationTest {
     void run_AbsolutePath_DeletesDirectory() throws IOException, AbstractApplicationException {
         Path directory = createDirectory("directoryAbs");
         createDirectory("innerAbs", directory);
-        new RmApplication().run(new String[]{"-r", TEMP_PATH.resolve("directoryAbs").toString()}, System.in, System.out);
+        new RmApplication().run(new String[]{"-r",
+                TEMP_PATH.resolve("directoryAbs").toString()}, System.in, System.out);
         assertTrue(Files.notExists(directory));
     }
 
